--- a/Friendstagram-Backend/app.config
+++ b/Friendstagram-Backend/app.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings configSource="connections.config"/>
+  <connectionStrings configSource="_connections.config"/>
+  <appSettings configSource="_appSettings.config"/>
 </configuration>
