--- a/Friendstagram-Backend/Friendstagram-Backend.csproj
+++ b/Friendstagram-Backend/Friendstagram-Backend.csproj
@@ -34,7 +34,8 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\resources\users\" />
+    <Folder Include="wwwroot\resources\posts\" />
   </ItemGroup>
 
 </Project>
